k8s/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      run: keycloak
  template:
    metadata:
      labels:
        run: keycloak
    spec:
      containers:
        - name: keycloak
          image: ghcr.io/mattiaswolfslehner/keycloak:latest
          imagePullPolicy: Always
          #command: ["/opt/keycloak/bin/kc.sh", "start-dev", "--proxy", "edge", "--features=declarative-user-profile", "--spi-x509cert-lookup-haproxy-trust-proxy-verification=true", "--hostname-admin-url=http://localhost:8000", "--log-level=INFO" ]
          command: ["/opt/keycloak/bin/kc.sh"]
          args:
            - start-dev
            - --proxy-headers
            - xforwarded
            - --hostname
            - https://it200239.cloud.htl-leonding.ac.at/auth
            - --hostname-admin=http://localhost:8000
            - --log-level=INFO
            - --db=postgres
            - --db-url=jdbc:postgresql://postgres:5432/demo
            - --db-username=demo
            - --db-password=demo
            - --http-enabled=true
            - --health-enabled=true
            - --metrics-enabled=true
            - --import-realm
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
          # livenessProbe:
            #httpGet:
           #   httpHeaders:
            #    - name: Accept
            #      value: application/json
            #  path: health/live
            #  port: 8080
           # initialDelaySeconds: 180
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: keycloak
  name: keycloak
spec:
  selector:
    run: keycloak
  ports:
    - name: auth-port
      port: 8080
      protocol: TCP
      targetPort: 8080
